--- a/mesto/src/blocks/header/header.css
+++ b/mesto/src/blocks/header/header.css
@@ -2,7 +2,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  margin: 45px auto 40px;
+  padding: 45px 0 0 0;
+  margin: 0 auto 40px;
   border-bottom: 1px solid rgba(84, 84, 84, .7);
 }
 
